--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "fuse.js": "^6.4.6",
     "humanize-duration": "^3.27.0",
     "moment": "^2.29.1",
+    "ngx-clipboard": "^14.0.1",
     "ngx-scrolltop": "^2.4.0",
     "ngx-toastr": "^13.2.1",
     "rxjs": "^6.6.2",
@@ -44,9 +45,9 @@
     "@angular/compiler-cli": "^11.2.14",
     "@angular/language-service": "^11.2.14",
     "@types/node": "^14.17.3",
+    "npm-check-updates": "^11.6.0",
     "ts-node": "^9.0.0",
     "tslint": "~6.1.3",
-    "typescript": "~4.1.5",
-    "npm-check-updates": "^11.6.0"
+    "typescript": "~4.1.5"
   }
 }
