--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --watch",
-    "build": "ng build --optimization=true --prod=true --sourceMap=false",
+    "build": "ng build --configuration production",
     "update": "ncu -u"
   },
   "private": true,
@@ -19,24 +19,23 @@
     "@angular/platform-browser-dynamic": "^11.2.14",
     "@angular/router": "^11.2.14",
     "@angular/service-worker": "^11.2.14",
-    "@fortawesome/angular-fontawesome": "^0.8.2",
-    "@fortawesome/fontawesome-svg-core": "^1.2.35",
-    "@fortawesome/free-brands-svg-icons": "^5.15.3",
-    "@fortawesome/free-regular-svg-icons": "^5.15.3",
-    "@fortawesome/free-solid-svg-icons": "^5.15.3",
-    "@ng-bootstrap/ng-bootstrap": "^9.1.2",
+    "@fortawesome/angular-fontawesome": "^0.9.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-regular-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "axios": "^0.21.1",
     "bignumber.js": "^9.0.1",
     "bootstrap": "^4.6.0",
-    "core-js": "^3.6.5",
     "fuse.js": "^6.4.6",
     "humanize-duration": "^3.27.0",
     "moment": "^2.29.1",
     "ngx-clipboard": "^14.0.1",
     "ngx-scrolltop": "^2.4.0",
-    "ngx-toastr": "^13.2.1",
+    "ngx-toastr": "^14.1.0",
     "rxjs": "^6.6.2",
-    "socket.io-client": "^4.1.2",
+    "socket.io-client": "^4.1.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
@@ -45,8 +44,8 @@
     "@angular/cli": "^11.2.14",
     "@angular/compiler-cli": "^11.2.14",
     "@angular/language-service": "^11.2.14",
-    "@types/node": "^14.17.3",
-    "npm-check-updates": "^11.6.0",
+    "@types/node": "^14.17.9",
+    "npm-check-updates": "^11.8.3",
     "ts-node": "^9.0.0",
     "tslint": "~6.1.3",
     "typescript": "~4.1.5"
