--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^11.2.14",
-    "@angular/common": "^11.2.14",
-    "@angular/compiler": "^11.2.14",
-    "@angular/core": "^11.2.14",
-    "@angular/forms": "^11.2.14",
-    "@angular/localize": "^11.2.14",
-    "@angular/platform-browser": "^11.2.14",
-    "@angular/platform-browser-dynamic": "^11.2.14",
-    "@angular/router": "^11.2.14",
-    "@angular/service-worker": "^11.2.14",
+    "@angular/animations": "^12.2.1",
+    "@angular/common": "^12.2.1",
+    "@angular/compiler": "^12.2.1",
+    "@angular/core": "^12.2.1",
+    "@angular/forms": "^12.2.1",
+    "@angular/localize": "^12.2.1",
+    "@angular/platform-browser": "^12.2.1",
+    "@angular/platform-browser-dynamic": "^12.2.1",
+    "@angular/router": "^12.2.1",
+    "@angular/service-worker": "^12.2.1",
     "@fortawesome/angular-fontawesome": "^0.9.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
@@ -32,22 +32,22 @@
     "humanize-duration": "^3.27.0",
     "moment": "^2.29.1",
     "ngx-clipboard": "^14.0.1",
-    "ngx-scrolltop": "^2.4.0",
+    "ngx-scrolltop": "^12.0.0-beta.0",
     "ngx-toastr": "^14.1.0",
     "rxjs": "^6.6.2",
     "socket.io-client": "^4.1.3",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.3"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.14",
-    "@angular/cli": "^11.2.14",
-    "@angular/compiler-cli": "^11.2.14",
-    "@angular/language-service": "^11.2.14",
+    "@angular-devkit/build-angular": "~12.2.1",
+    "@angular/cli": "^12.2.1",
+    "@angular/compiler-cli": "^12.2.1",
+    "@angular/language-service": "^12.2.1",
     "@types/node": "^14.17.9",
     "npm-check-updates": "^11.8.3",
-    "ts-node": "^9.0.0",
+    "ts-node": "^10.2.0",
     "tslint": "~6.1.3",
-    "typescript": "~4.1.5"
+    "typescript": "~4.3.5"
   }
 }
