Upload sourcemaps to sentry on release

--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --watch --disable-host-check",
-    "build": "ng build --configuration production --source-map=true",
+    "build": "ng build --configuration production",
+    "build:source-maps": "ng build --configuration production-with-source-maps",
     "prebuild": "yarn run bin:generate-env-config",
+    "prebuild:source-maps": "yarn run bin:generate-env-config",
     "bin:generate-env-config": "node ./bin/generate-env-config.js",
     "update": "ncu -u"
   },
