--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,6 +10,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Set up Node.js 14
+        uses: actions/setup-node@v2
+        with:
+          node-version: 14.x
+      - name: Install
+        run: yarn install
+      - name: Build source maps
+        run: yarn run build:source-maps
       - name: Create Sentry release
         uses: getsentry/action-release@v1
         env:
@@ -18,3 +26,4 @@ jobs:
           SENTRY_PROJECT: ${{ secrets.SENTRY_PROJECT }}
         with:
           environment: production
+          sourcemaps: './dist'
