--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "@ngneat/edit-in-place": "1.6.1",
     "@sentry/angular": "^7.37.1",
     "@sentry/tracing": "^7.37.1",
     "axios": "^1.3.2",
@@ -64,6 +65,6 @@
     "typescript": "~4.3.5"
   },
   "engines": {
-    "node": "16.x"
+    "node": ">=16"
   }
 }
