--- a/package.json
+++ b/package.json
@@ -13,56 +13,56 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^12.2.17",
-    "@angular/common": "^12.2.17",
-    "@angular/compiler": "^12.2.17",
-    "@angular/core": "^12.2.17",
-    "@angular/forms": "^12.2.17",
-    "@angular/localize": "^12.2.17",
-    "@angular/platform-browser": "^12.2.17",
-    "@angular/platform-browser-dynamic": "^12.2.17",
-    "@angular/router": "^12.2.17",
-    "@angular/service-worker": "^12.2.17",
-    "@fortawesome/angular-fontawesome": "^0.9.0",
+    "@angular/animations": "^13.4.0",
+    "@angular/common": "^13.4.0",
+    "@angular/compiler": "^13.4.0",
+    "@angular/core": "^13.4.0",
+    "@angular/forms": "^13.4.0",
+    "@angular/localize": "^13.4.0",
+    "@angular/platform-browser": "^13.4.0",
+    "@angular/platform-browser-dynamic": "^13.4.0",
+    "@angular/router": "^13.4.0",
+    "@angular/service-worker": "^13.4.0",
+    "@fortawesome/angular-fontawesome": "^0.10.2",
     "@fortawesome/fontawesome-svg-core": "^1.3.0",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
-    "@ngneat/edit-in-place": "1.6.1",
-    "@sentry/angular": "^7.37.1",
-    "@sentry/tracing": "^7.37.1",
-    "axios": "^1.3.2",
+    "@ng-bootstrap/ng-bootstrap": "^11.0.1",
+    "@ngneat/edit-in-place": "^1.6.1",
+    "@sentry/angular": "^7.48.0",
+    "@sentry/tracing": "^7.48.0",
+    "axios": "^1.3.5",
     "bignumber.js": "^9.1.1",
     "bootstrap": "^4.6.2",
-    "echarts": "^5.4.1",
+    "echarts": "^5.4.2",
     "moment": "^2.29.4",
-    "ngx-clipboard": "^14.0.2",
+    "ngx-clipboard": "^15.1.0",
     "ngx-echarts": "^8.0.1",
-    "ngx-scrolltop": "^12.0.0-beta.1",
-    "ngx-toastr": "14.3.0",
-    "rxjs": "^6.6.7",
+    "ngx-scrolltop": "^4.3.0",
+    "ngx-toastr": "^14.3.0",
+    "rxjs": "^7.8.0",
     "tslib": "^2.5.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.18",
-    "@angular-eslint/builder": "12.7.0",
-    "@angular-eslint/eslint-plugin": "12.7.0",
-    "@angular-eslint/eslint-plugin-template": "12.7.0",
-    "@angular-eslint/schematics": "12.7.0",
-    "@angular-eslint/template-parser": "12.7.0",
-    "@angular/cli": "^12.2.18",
-    "@angular/compiler-cli": "^12.2.17",
-    "@angular/language-service": "^12.2.17",
+    "@angular-devkit/build-angular": "~13.3.11",
+    "@angular-eslint/builder": "^13.5.0",
+    "@angular-eslint/eslint-plugin": "^13.5.0",
+    "@angular-eslint/eslint-plugin-template": "^13.5.0",
+    "@angular-eslint/schematics": "^13.5.0",
+    "@angular-eslint/template-parser": "^13.5.0",
+    "@angular/cli": "^13.3.11",
+    "@angular/compiler-cli": "^13.4.0",
+    "@angular/language-service": "^13.4.0",
     "@juggle/resize-observer": "^3.4.0",
-    "@types/node": "^16.18.12",
-    "@typescript-eslint/eslint-plugin": "4.33.0",
-    "@typescript-eslint/parser": "4.33.0",
-    "eslint": "^7.32.0",
-    "npm-check-updates": "^16.7.4",
+    "@types/node": "^18.15.11",
+    "@typescript-eslint/eslint-plugin": "^5.58.0",
+    "@typescript-eslint/parser": "^5.58.0",
+    "eslint": "^8.38.0",
+    "npm-check-updates": "^16.10.8",
     "ts-node": "^10.9.1",
-    "typescript": "~4.3.5"
+    "typescript": "~4.6.4"
   },
   "engines": {
     "node": ">=16"
