--- a/angular.json
+++ b/angular.json
@@ -108,8 +108,9 @@
       }
     }
   },
-  "defaultProject": "chia-pool-ui",
   "cli": {
-    "defaultCollection": "@angular-eslint/schematics"
+    "schematicCollections": [
+      "@angular-eslint/schematics"
+    ]
   }
 }
