--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,8 @@
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.scss",
-              "src/bootstrap-xxl.css"
+              "src/bootstrap-xxxl.css",
+              "src/bootstrap-xxxxl.css"
             ],
             "scripts": [],
             "allowedCommonJsDependencies": [],
