--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "axios": "^1.3.5",
     "bignumber.js": "^9.1.1",
     "bootstrap": "^5.2.3",
+    "compare-versions": "^6.0.0-rc.1",
     "echarts": "^5.4.2",
     "moment": "^2.29.4",
     "ngx-clipboard": "^16.0.0",
