--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
     "@ng-bootstrap/ng-bootstrap": "^14.1.1",
     "@ngneat/edit-in-place": "^1.6.1",
     "@popperjs/core": "^2.11.7",
-    "@sentry/angular": "^7.51.2",
-    "@sentry/tracing": "^7.51.2",
+    "@sentry/angular-ivy": "^7.51.2",
     "axios": "^1.4.0",
     "bignumber.js": "^9.1.1",
     "bootstrap": "^5.2.3",
