--- a/angular.json
+++ b/angular.json
@@ -29,6 +29,7 @@
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.scss",
+              "src/bootstrap-extensions.css",
               "src/bootstrap-xxxl.css",
               "src/bootstrap-xxxxl.css",
               "src/bootstrap-xxxxxl.css"
