--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --watch --disable-host-check",
-    "build": "yarn run bin:generate-env-config && ng build --configuration production",
+    "build": "pnpm run bin:generate-env-config && ng build --configuration production",
     "bin:generate-env-config": "node ./bin/generate-env-config.js",
     "update": "ncu -u",
     "lint": "ng lint",
@@ -35,7 +35,7 @@
     "angularx-qrcode": "^15.0.1",
     "axios": "^1.4.0",
     "bignumber.js": "^9.1.1",
-    "bootstrap": "^5.2.3",
+    "bootstrap": "^5.3.2",
     "compare-versions": "^6.0.0-rc.1",
     "echarts": "^5.4.2",
     "moment": "^2.29.4",
