Use updated fork `ngx-slider-v2`

--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-slider/ngx-slider": "^2.0.4",
     "@angular/animations": "^15.2.9",
     "@angular/common": "^15.2.9",
     "@angular/compiler": "^15.2.9",
@@ -42,6 +41,7 @@
     "ngx-clipboard": "^16.0.0",
     "ngx-echarts": "^15.0.3",
     "ngx-scrolltop": "^5.1.0",
+    "ngx-slider-v2": "^15.0.6",
     "ngx-toastr": "^16.2.0",
     "rxjs": "^7.8.1",
     "tslib": "^2.5.0",
