--- a/angular.json
+++ b/angular.json
@@ -35,6 +35,7 @@
             ],
             "scripts": [],
             "allowedCommonJsDependencies": [
+              "qrcode",
               "moment"
             ],
             "vendorChunk": true,
