--- a/package.json
+++ b/package.json
@@ -29,15 +29,15 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@ng-bootstrap/ng-bootstrap": "^14.1.1",
     "@ngneat/edit-in-place": "^1.6.1",
-    "@popperjs/core": "^2.11.7",
+    "@popperjs/core": "^2.11.8",
     "@sentry/angular-ivy": "^7.51.2",
     "angularx-qrcode": "^15.0.1",
-    "axios": "^1.4.0",
-    "bignumber.js": "^9.1.1",
+    "axios": "^1.6.3",
+    "bignumber.js": "^9.1.2",
     "bootstrap": "^5.3.2",
-    "compare-versions": "^6.0.0-rc.1",
-    "echarts": "^5.4.2",
-    "moment": "^2.29.4",
+    "compare-versions": "^6.1.0",
+    "echarts": "^5.4.3",
+    "moment": "^2.30.1",
     "ngx-clipboard": "^16.0.0",
     "ngx-echarts": "^15.0.3",
     "ngx-scrolltop": "^5.1.0",
@@ -67,6 +67,6 @@
     "typescript": "~4.9.5"
   },
   "engines": {
-    "node": ">=16"
+    "node": ">=18"
   }
 }
