--- a/angular.json
+++ b/angular.json
@@ -87,18 +87,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "chia-pool-ui:build"
+            "buildTarget": "chia-pool-ui:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "chia-pool-ui:build:production"
+              "buildTarget": "chia-pool-ui:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "chia-pool-ui:build"
+            "buildTarget": "chia-pool-ui:build"
           }
         },
         "lint": {
