--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,10 +13,10 @@ jobs:
       - uses: pnpm/action-setup@v2
         with:
           version: latest
-      - name: Set up Node.js 18
+      - name: Set up Node.js 20.x
         uses: actions/setup-node@v3
         with:
-          node-version: 18.x
+          node-version: 20.x
           cache: 'pnpm'
       - name: Install
         run: pnpm install
